Revert "add class activities"
